Genre and Film-Genre Relation created

--- a/ParkCinema/src/ParkCinema.Business/ParkCinema.Business.csproj
+++ b/ParkCinema/src/ParkCinema.Business/ParkCinema.Business.csproj
@@ -11,4 +11,10 @@
     <ProjectReference Include="..\ParkCinema.DataAccess\ParkCinema.DataAccess.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTOs\Film\" />
+    <Folder Include="Mappers\" />
+    <Folder Include="Validators\Film\" />
+  </ItemGroup>
+
 </Project>
