--- a/ParkCinema/src/ParkCinema.Business/ParkCinema.Business.csproj
+++ b/ParkCinema/src/ParkCinema.Business/ParkCinema.Business.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.13" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+  </ItemGroup>
+
 </Project>
