--- a/ParkCinema/src/ParkCinema.Business/ParkCinema.Business.csproj
+++ b/ParkCinema/src/ParkCinema.Business/ParkCinema.Business.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ParkCinema.Application\ParkCinema.Application.csproj" />
     <ProjectReference Include="..\ParkCinema.DataAccess\ParkCinema.DataAccess.csproj" />
   </ItemGroup>
 
