--- a/ParkCinema/src/ParkCinema.Infrastructure/ParkCinema.Infrastructure.csproj
+++ b/ParkCinema/src/ParkCinema.Infrastructure/ParkCinema.Infrastructure.csproj
@@ -7,15 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\Email\" />
     <Folder Include="Services\Storage\Azure\" />
     <Folder Include="Services\Storage\Local\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.14.1" />
+    <PackageReference Include="MailKit" Version="3.5.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="MimeKit" Version="3.5.0" />
     <PackageReference Include="ServiceStack.Stripe" Version="6.6.0" />
     <PackageReference Include="Stripe.net" Version="41.7.0" />
   </ItemGroup>
