--- a/ParkCinema/src/ParkCinema.Infrastructure/ParkCinema.Infrastructure.csproj
+++ b/ParkCinema/src/ParkCinema.Infrastructure/ParkCinema.Infrastructure.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
     <PackageReference Include="MimeKit" Version="3.5.0" />
+    <PackageReference Include="QRCoder" Version="1.4.3" />
     <PackageReference Include="ServiceStack.Stripe" Version="6.6.0" />
     <PackageReference Include="Stripe.net" Version="41.7.0" />
   </ItemGroup>
